# Kea_SOFT_System_Integration_2024_Spring

./: .gitignore  LICENSE  README.adoc  README.md  backup.sql  dump.rdb
00._Course_Material/: About_This_Course.md  about_the_course.md  markdown_table_generator.py
00._Course_Material/00._Meta_Course_Material/: about_the_course.md  about_the_course_I.md  about_the_course_II.md  exam_requirements.md  markdown_table_generator.py
00._Course_Material/00._assignments/01._Introduction_Data_Formats/: 00._[Individual]_Azure_For_Students.md  01a._[Individual]_File_formats_bonanza!.md
00._Course_Material/00._assignments/02._Data/: 00._[Optional]_Serialize__Marshall_data.md
00._Course_Material/01._Assignments/: [Optional]_Cloud.md
00._Course_Material/01._Assignments/00._Mandatories/: 01._Mandatory_I.md  02._Mandatory_II.md
00._Course_Material/01._Assignments/01._Introduction_Data_Formats/: 00._Install.md  00._[Individual]_Install_Node.js.md  01a._Data_parsing_server_Part_I.md  01a._[Individual]_Data_Parsing.md  01a._[Individual]_File_formats_bonanza!.md
00._Course_Material/01._Assignments/02._Data/: 00._Data_parsing_server_Part_II.md  00._Serialize_Marshall_data.md  00._[Individual]_Data_parsing_server_-_Part_I.md  02a._[Individual]_Data_format_translation_servers_-_Part_II.md
00._Course_Material/01._Assignments/04._Real-time_communication_Part_II/: 04a._SSE_example.md  (+1 more)
01._Miscellaneous/: getgooglehomepage.sh  paymentiframe.html
02._Data_Files/: me.csv  me.json  me.xml  me.yaml
03._Modules/html_no_modules/: index.html  index.js  myModule.js
03._Modules/html_with_modules/: index.html  index.js  myModule.js
03._Modules/node_commonjs_modules/: index.js  myModule.js
03._Modules/node_es_modules/: index.js  myModule.js
03._Modules/python_modules/: main.py
04._Encoding_Decoding/node/: index.js
04._Encoding_Decoding/python/: main.py
05._Python_Environments/: tutorial.md
05._Python_Environments/01._Virtualenv_Environment/: .gitignore  pyvenv.cfg  requirements.txt
05._Python_Environments/02._Pipenv_Environment/: Pipfile  main.py
05._Python_Environments/03._Poetry_Environment/: pyproject.toml
06._Servers/node/: app.js  package-lock.json
06._Servers/python/: main.py  pyproject.toml
07._TCP_UDP_bonus/: about.txt
08._Server-To-Server/node/: app.js  package-lock.json  package.json
08._Server-To-Server/python/: main.py  pyproject.toml
09._Environment_Variables/node/: .env-dev copy  .env_template  index.js  package-lock.json  package.json
09._Environment_Variables/python/: main.py  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._Short_Polling/node/: app.js  package.json
12._Long_Polling/node/: app.js
13._Server-sent_Events/node/: package-lock.json
13._Server-sent_Events/node-sse/: app.js
13._Server-sent_Events/python-sse/: main.py  pyproject.toml
13._Server-sent_Events/python-sse/templates/: index.html
14._WebSockets/node-websockets/: server.js
14._WebSockets/python-fastapi/: pyproject.toml
14._WebSockets/python-plain/: client.py
15._Github_Webhooks/node-webhooks/: app.js  package-lock.json  package.json
15._Github_Webhooks/python-webhooks/: main.py  pyproject.toml
16._CORS/: index.html
16._CORS/node/: app.js  package-lock.json  package.json
16._CORS/node-CORS/: app.js  package-lock.json
16._CORS/python-CORS/: main.py  pyproject.toml
16._Websockets/node-websockets/: clients.js  index.html  package-lock.json  package.json
16._Websockets/python-fastapi/: connection_manager.py  main.py
16._Websockets/python-plain/: pyproject.toml  server.py
17._Multipart-Forms/: index.html  nestedForms.html
17._Multipart-Forms/node-multipart-forms/: app.js  package-lock.json  package.json
17._Multipart-Forms/python-multipart-forms/: main.py  pyproject.toml
18._Images/: base64.html
19._Audio/: index.html
20._MPEG_DASH/: about.md  app.js  package-lock.json  package.json  youtubevideo.html
20._MPEG_DASH/public/: index.html
21._MYSQL_Backup/: README.md  backup.sql  docker_mysql.md  locally_installed_mysql.md
22._Database_Documentation/: README.md
23._Database_Migrations/: README.md
23._Database_Migrations/node-knex/: README.md  index.js  knexfile.js  package-lock.json  package.json  si_test.json
23._Database_Migrations/python-alembic/: README.md  alembic.ini  pyproject.toml
23._Database_Migrations/python-alembic/alembic/versions/: 7f668b307ff7_create_account_table.py
24._Redis/: README.md
24._Redis/node-redis/: index.js  package-lock.json  package.json
24._Redis/python-basic-example/: main.py  pyproject.toml
24._Redis/python-pub-sub/: publisher.py  pyproject.toml  subscriber.py
24._Redis/python-task-queues/: pyproject.toml  scheduler.py  utils.py  worker.py
25._OpenAPI/java-OpenAPI/: README.md  SwaggerConfig.java  partial_pom.xml
25._OpenAPI/node-OpenAPI/: app.js  package-lock.json  package.json
25._OpenAPI/python-OpenAPI/: main.py  openapi.json  pyproject.toml
25._OpenAPI/python-OpenAPI/routers/: __init__.py  spacecraft_router.py
26._GraphQL/01._node_basic/: app.js  package-lock.json  package.json
26._GraphQL/02._node_apollo/: package-lock.json  tsconfig.json
26._GraphQL/02._node_intermediary/: app.js  package-lock.json  package.json
26._GraphQL/03._node_apollo/: package.json
26._GraphQL/03._python_ariadne/: pyproject.toml
26._GraphQL/03._python_ariadne/database/: __init__.py  author_crud.py  book_crud.py  data.py
26._GraphQL/03._python_ariadne/graphql/: schema.graphql
26._GraphQL/04._python_ariadne/: main.py
27._Web_Scraping_Crawling/01._Node/: index.html  index.js  package-lock.json  package.json
(+75 files in other folders)
