[tool.poetry]
name = "python-task-queues"
version = "0.1.0"
description = ""
authors = ["anderslatif <anderslatif@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.4"
rq = "^1.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
